# mdywork2

base-mdy/: README.md  data.json  polarity_settings.json  polarity_settings.json.bak
base-mdy/clang-tools-extra/: CMakeLists.txt
base-mdy/clang-tools-extra/clang-keygen/: CMakeLists.txt  ClangKeygen.cpp
base-mdy/clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidy.cpp  ClangTidyCheck.cpp  ClangTidyCheck.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyForceLinker.h  HTMLGenerate.cpp  HTMLGenerate.h  delete_check.py  rename_check.py  useful-clang-tools.sh
base-mdy/clang-tools-extra/clang-tidy/abseil/: DurationConversionCastCheck.cpp
base-mdy/clang-tools-extra/clang-tidy/bugprone/: BugproneTidyModule.cpp  CMakeLists.txt  InfiniteLoopCheck.cpp  InterruptFunctionStorageCheck.cpp  InterruptFunctionStorageCheck.h  MacroParenthesesCheck.cpp
base-mdy/clang-tools-extra/clang-tidy/bz12/: AbsParameterCheck.cpp  AbsParameterCheck.h  ArgumentsAndStructMembersSameNameCheck.cpp  ArgumentsAndStructMembersSameNameCheck.h  AssignconsistencyCheck.cpp  AssignconsistencyCheck.h  BasicBlockDoubleAssignCheck.cpp  BasicBlockDoubleAssignCheck.h  BasicBlockUnusedOrRepeatusedCheck.cpp  BasicBlockUnusedOrRepeatusedCheck.h  BlockConsistencyCheck.cpp  BlockConsistencyCheck.h  BranchAssignmentDifferenceCheck.cpp  BranchAssignmentDifferenceCheck.h  BranchVariableStatisticsCheck.cpp  BranchVariableStatisticsCheck.h  Bz12TidyModule.cpp  CMakeLists.txt  ConditionalStatementEqualityCheck.cpp  ConditionalStatementEqualityCheck.h  DifferentFunctionDeclarationAndDefinitionCheck.cpp  DifferentFunctionDeclarationAndDefinitionCheck.h  ExternDefinationDeclareTypeCheck.cpp  ExternDefinationDeclareTypeCheck.h  InfinitelLoopCheck.cpp  InfinitelLoopCheck.h  InitialValueCheck.cpp  InitialValueCheck.h  MatrixCalcParametersCheck.cpp  MatrixCalcParametersCheck.h  MemsetMultipleRankPointerCheck.cpp  MemsetMultipleRankPointerCheck.h  StructDefaultAlignmentCheck.cpp  StructDefaultAlignmentCheck.h  StructDefinationDeclareConsistenceCheck.cpp  StructDefinationDeclareConsistenceCheck.h  TypeCastCheck.cpp  TypeCastCheck.h  UninitializedStructElementCheck.cpp  UninitializedStructElementCheck.h  (+8 more)
base-mdy/clang-tools-extra/clang-tidy/cert/: FloatLoopCounter.cpp
base-mdy/clang-tools-extra/clang-tidy/counter/: CMakeLists.txt  CounterTidyModule.cpp  CounterTidyModule.h  FunctionInfoCheck.cpp  FunctionInfoCheck.h
base-mdy/clang-tools-extra/clang-tidy/cppcoreguidelines/: AvoidGotoCheck.h  NarrowingConversionsCheck.cpp  ProBoundsConstantArrayIndexCheck.cpp
base-mdy/clang-tools-extra/clang-tidy/llvm/: IncludeOrderCheck.cpp
base-mdy/clang-tools-extra/clang-tidy/readability/: CMakeLists.txt  CheckScopeEmptyTidyCheck.h  FunctionParametersCheck.cpp  FunctionParametersCheck.h  InvalidVaribaleNameCheck.cpp  InvalidVaribaleNameCheck.h  LoopControlCheck.cpp  LoopControlCheck.h  NestedCommentCheck.cpp  NestedCommentCheck.h  ReadabilityTidyModule.cpp  VariablenameDuplicationCheck.cpp  VariablenameDuplicationCheck.h
base-mdy/clang-tools-extra/clang-tidy/scope/: CMakeLists.txt  EmptyConditionCheck.cpp  EmptyConditionCheck.h  IntegerDivLossAccuracyCheck.cpp  IntegerDivLossAccuracyCheck.h  ScopeTidyModule.cpp
base-mdy/clang-tools-extra/clang-tidy/tool/: ClangTidyMain.cpp
base-mdy/clang-tools-extra/docs/: ReleaseNotes.rst
base-mdy/clang-tools-extra/pp-trace/: PPCallbacksTracker.cpp
base-mdy/clang-tools-extra/test/clang-tidy/: check_clang_tidy.py
base-mdy/clang/docs/: LibASTMatchersReference.html
base-mdy/clang/lib/AST/: ASTImporter.cpp  Decl.cpp  DeclPrinter.cpp  Type.cpp
base-mdy/clang/lib/Analysis/: IssueHash.cpp  MacroExpansionContext.cpp
base-mdy/clang/lib/Basic/: CMakeLists.txt  Diagnostic.cpp  KeyAuth.cpp  ScopeEncrypt.cpp  SourceLocation.cpp  SourceManager.cpp
base-mdy/clang/lib/CodeGen/: CGCall.cpp  CGOpenMPRuntime.cpp  CodeGenModule.cpp
base-mdy/clang/lib/CrossTU/: CrossTranslationUnit.cpp
base-mdy/clang/lib/Frontend/: ASTConsumers.cpp  CompilerInvocation.cpp  FrontendActions.cpp
base-mdy/clang/lib/StaticAnalyzer/Checkers/: ArrayBoundChecker.cpp  ArrayBoundCheckerV2.cpp  AssignNegativeToUnsignedNumberChecker.cpp  BasicObjCFoundationChecks.cpp  BinaryOperatorChecker.cpp  BoolAssignmentChecker.cpp  BuiltinFunctionChecker.cpp  CMakeLists.txt  CStringChecker.cpp  CallAndMessageChecker.cpp  CastSizeChecker.cpp  CheckMacroFunction.cpp  CheckObjCDealloc.cpp  CheckPlacementNew.cpp  CheckSecuritySyntaxOnly.cpp  ChrootChecker.cpp  ConditionalBranchChecker.cpp  ContainerModeling.cpp  ConversionChecker.cpp  DeadStoresChecker.cpp  DebugContainerModeling.cpp  DebugIteratorModeling.cpp  DeleteWithNonVirtualDtorChecker.cpp  DereferenceChecker.cpp  DivZeroChecker.cpp  DynamicTypeChecker.cpp  EnumCastOutOfRangeChecker.cpp  ExprInspectionChecker.cpp  ExternDeclaredFunctionArgumentsTypeChecker.cpp  ExternDeclaredVariableTypeChecker.cpp  FixedAddressChecker.cpp  FloatEqualChecker.cpp  FuchsiaHandleChecker.cpp  FunctionCallStringChecker.cpp  FunctionProcedureChecker.cpp  FunctionReturnChecker.cpp  GenericTaintChecker.cpp  InterruptFunctionChecker.cpp  InvalidatedIteratorChecker.cpp  IteratorModeling.cpp  (+55 more)
base-mdy/clang/lib/StaticAnalyzer/Checkers/CheckScope/: CMakeLists.txt  CheckScopeBuiltinInclude.py
base-mdy/clang/lib/StaticAnalyzer/Checkers/CheckScope/ScopeAlpha/: CMakeLists.txt  ScopeFileDescriptorChecker.cpp  ScopeMemoryAllocationChecker.cpp  ScopeSampleChecker.cpp  ScopeSinEvaluateChecker.cpp
base-mdy/clang/lib/StaticAnalyzer/Checkers/CheckScope/ScopeDev/: CMakeLists.txt  ScopePointerSubChecker.cpp  ScopeStackAddrEscapeAwayChecker.cpp
base-mdy/clang/lib/StaticAnalyzer/Checkers/CheckScope/common/: CheckScope.cpp  CheckScope.h  ScopeBuiltinCheckerRegister.cpp  ScopeDynamicExtent.cpp  ScopeDynamicExtent.h  ScopeExprCmp.cpp  ScopeExprCmp.h  ScopeOverRunRegionRawOffset.cpp  ScopeOverRunRegionRawOffset.h  ScopeSValCmp.cpp  ScopeSValCmp.h  ScopeTaint.cpp  ScopeTaint.h
base-mdy/llvm/: CMakeLists.txt
base-mdy/llvm/lib/Transforms/: CMakeLists.txt
base-mdy/llvm/test/: CMakeLists.txt
(+576 files in other folders)
